--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -39,13 +39,25 @@
             android:textColor="@color/green"
             android:textSize="12sp" />
 
-        <TextView
-            android:layout_marginTop="30dp"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Alireza Rezaie || 94991386"
-            android:textColor="@color/green"
-            android:textSize="16sp" />
+            android:orientation="horizontal">
+            <TextView
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Alireza Rezaie \nAli Nasiri"
+                android:textColor="@color/green"
+                android:textSize="16sp" />
+            <TextView
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="|| 94991386 \n|| 94991237"
+                android:textColor="@color/green"
+                android:textSize="16sp" />
+        </LinearLayout>
 
 
     </LinearLayout>
